--- a/SauceDemoUiBetsson/SauceDemoUiBetsson.csproj
+++ b/SauceDemoUiBetsson/SauceDemoUiBetsson.csproj
@@ -12,9 +12,12 @@
     <ItemGroup>
         <PackageReference Include="coverlet.collector" Version="6.0.0"/>
         <PackageReference Include="FluentAssertions" Version="6.12.0" />
+        <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
+        <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="8.0.0" />
+        <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="8.0.0" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0"/>
         <PackageReference Include="Microsoft.Playwright" Version="1.41.2" />
-        <PackageReference Include="Microsoft.Playwright.NUnit" Version="1.27.1"/>
+        <PackageReference Include="Microsoft.Playwright.NUnit" Version="1.41.2" />
         <PackageReference Include="NUnit" Version="4.0.1" />
         <PackageReference Include="NUnit3TestAdapter" Version="4.5.0"/>
         <PackageReference Include="Serilog" Version="3.1.1" />
@@ -31,4 +34,9 @@
         <Using Include="System.Threading.Tasks"/>
     </ItemGroup>
 
+    <ItemGroup>
+        <None Update="appsettings.json">
+            <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        </None>
+    </ItemGroup>
 </Project>
